jobberapp/k8s/minikube/1-gateway/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobber-gateway
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jobber-gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25% 
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: jobber-gateway
    spec:
      containers:
      - name: jobber-gateway
        image: mydockerid/1-gateway-service
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "512Mi"
            cpu: '500m'
          requests:
            memory: 128Mi
            cpu: 100m
        ports:
        - name: gateway
          containerPort: 4000
