jobberapp/k8s/minikube/1-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jobber-gateway-ingress
  namespace: production
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.k8s.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: jobber-gateway
      port: 
        number: 4000
  tls:
    - hosts:
      - jobberapp.local
      secretName: gateway-ingress-tls
  rules:
  - host: jobberapp.local
    http:
      paths:
      - path: /api/gateway/v1
        pathType: Prefix
        backend:
          service:
            name: jobber-gateway
            port: 
              number: 4000
